fixtures/errors/not_enough_elements/lib/not_enough_elements.esc
val [a, b, c] = [1]
console.log(a)
